opam-version: "1.2"
name: "openai-gym"
version: "0.01"
maintainer: [
  "Louis Mandel <lmandel@us.ibm.com>"
]
authors: [
  "Louis Mandel"
]
homepage: "https://github.com/IBM/openai-gym-ocaml"
bug-reports: "https://github.com/IBM/openai-gym-ocaml/issues"
license: "Apache License 2.0"
dev-repo: "https://github.com/IBM/openai-gym-ocaml.git"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "dune" {build}
  "ocaml-migrate-parsetree" {build}
  "atdgen" {build}
  "atd"
  "yojson"
  "cohttp-lwt-unix" {>= "1.0.0"}
]
available: [
  ocaml-version >= "4.03.0"
]
